force-app/main/default/objects/Interface_Log_Line__c/Interface_Log_Line__c.object-meta.xml
<CustomObject>
    <description>Object to track details of each external API Callout from salesfore.</description>
    <label>Interface Log Line</label>
    <nameField>
        <displayFormat>IEL-{0000}</displayFormat>
        <label>Interface Log Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interface Log Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>