force-app/main/default/objects/Interface_Log_Line__c/fields/Interface_Log__c.field-meta.xml
<CustomField>
    <fullName>Interface_Log__c</fullName>
    <description>Parent Interface Log.</description>
    <label>Interface Log</label>
    <referenceTo>Interface_Log__c</referenceTo>
    <relationshipLabel>Interface Log Lines</relationshipLabel>
    <relationshipName>Interface_Log_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>