force-app/main/default/objects/Interface_Log_Line__c/fields/Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Object_ID__c</fullName>
    <description>Id of Sobject Record for which Callout is Made.</description>
    <label>Object ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>