force-app/main/default/objects/Interface_Log_Line__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>Sobject Name for which Callout is Made.</description>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>